Resources/Parsers/alef/alefParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/alef/alef.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import alefListener from './alefListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class alefParser extends antlr4.Parser {

    static grammarFileName = "alef.g4";
    static literalNames = [ null, "';'", "'('", "')'", "'.'", "'{'", "'}'", 
                            "'['", "']'", "','", "'='", "'*'", "'!'", "':'", 
                            "'/'", "'%'", "'+'", "'-'", "'>>'", "'<<'", 
                            "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                            "'&'", "'^'", "'|'", "'&&'", "'||'", "':='", 
                            "'<-'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                            "'>>='", "'<<='", "'&='", "'|='", "'^='", "'::'", 
                            "'--'", "'++'", "'~'", "'?'", "'->'", "'$'", 
                            "'adt'", "'aggr'", "'alloc'", "'alt'", "'become'", 
                            "'break'", "'byte'", "'case'", "'chan'", "'check'", 
                            "'continue'", "'default'", "'do'", "'else'", 
                            "'enum'", "'extern'", "'float'", "'for'", "'goto'", 
                            "'if'", "'int'", "'intern'", "'lint'", "'nil'", 
                            "'par'", "'proc'", "'raise'", "'rescue'", "'return'", 
                            "'sint'", "'sizeof'", "'switch'", "'task'", 
                            "'tuple'", "'typedef'", "'typeof'", "'uint'", 
                            "'ulint'", "'unalloc'", "'union'", "'usint'", 
                            "'void'", "'while'", "'zerox'", "'private'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "ADT", "AGGR", "ALLOC", "ALT", 
                             "BECOME", "BREAK", "BYTE", "CASE", "CHAN", 
                             "CHECK", "CONTINUE", "DEFAULT", "DO", "ELSE", 
                             "ENUM", "EXTERN", "FLOAT", "FOR", "GOTO", "IF", 
                             "INT", "INTERN", "LINT", "NIL", "PAR", "PROC", 
                             "RAISE", "RESCUE", "RETURN", "SINT", "SIZEOF", 
                             "SWITCH", "TASK", "TUPLE", "TYPEDEF", "TYPEOF", 
                             "UINT", "ULINT", "UNALLOC", "UNION", "USINT", 
                             "VOID", "WHILE", "ZEROX", "PRIVATE", "IDENTIFIER", 
                             "STRING_CONST", "CONSTANT", "ARITHMETIC_CONST", 
                             "WS" ];
    static ruleNames = [ "program", "decllist", "decl", "zargs", "ztname", 
                         "adtfunc", "typespec", "ztag", "zpolytype", "polytype", 
                         "setlist", "sname", "name", "memberlist", "vardecllist", 
                         "ivardecl", "zinit", "zelist", "vardecl", "arrayspec", 
                         "indsp", "arglist", "arglistp", "arg", "tuplearg", 
                         "autolist", "autodecl", "block", "slist", "tbody", 
                         "ctlist", "tcase", "cbody", "clist", "case_", "rbody", 
                         "zlab", "stmnt", "info", "nlstmnt", "zconst", "zexpr", 
                         "expr_", "castexpr", "typecast", "monexpr", "ztelist", 
                         "telist", "tcomp", "term_", "stag", "zarlist", 
                         "elist", "tlist", "tname", "variant", "xtname", 
                         "bufdim", "sclass", "typename", "enum_member" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = alefParser.ruleNames;
        this.literalNames = alefParser.literalNames;
        this.symbolicNames = alefParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 10:
    	    		return this.setlist_sempred(localctx, predIndex);
    	case 13:
    	    		return this.memberlist_sempred(localctx, predIndex);
    	case 17:
    	    		return this.zelist_sempred(localctx, predIndex);
    	case 42:
    	    		return this.expr__sempred(localctx, predIndex);
    	case 49:
    	    		return this.term__sempred(localctx, predIndex);
    	case 52:
    	    		return this.elist_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    setlist_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    memberlist_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    zelist_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr__sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 32);
    		case 4:
    			return this.precpred(this._ctx, 31);
    		case 5:
    			return this.precpred(this._ctx, 30);
    		case 6:
    			return this.precpred(this._ctx, 29);
    		case 7:
    			return this.precpred(this._ctx, 28);
    		case 8:
    			return this.precpred(this._ctx, 27);
    		case 9:
    			return this.precpred(this._ctx, 26);
    		case 10:
    			return this.precpred(this._ctx, 25);
    		case 11:
    			return this.precpred(this._ctx, 24);
    		case 12:
    			return this.precpred(this._ctx, 23);
    		case 13:
    			return this.precpred(this._ctx, 22);
    		case 14:
    			return this.precpred(this._ctx, 21);
    		case 15:
    			return this.precpred(this._ctx, 20);
    		case 16:
    			return this.precpred(this._ctx, 19);
    		case 17:
    			return this.precpred(this._ctx, 18);
    		case 18:
    			return this.precpred(this._ctx, 17);
    		case 19:
    			return this.precpred(this._ctx, 16);
    		case 20:
    			return this.precpred(this._ctx, 15);
    		case 21:
    			return this.precpred(this._ctx, 14);
    		case 22:
    			return this.precpred(this._ctx, 13);
    		case 23:
    			return this.precpred(this._ctx, 12);
    		case 24:
    			return this.precpred(this._ctx, 11);
    		case 25:
    			return this.precpred(this._ctx, 10);
    		case 26:
    			return this.precpred(this._ctx, 9);
    		case 27:
    			return this.precpred(this._ctx, 8);
    		case 28:
    			return this.precpred(this._ctx, 7);
    		case 29:
    			return this.precpred(this._ctx, 6);
    		case 30:
    			return this.precpred(this._ctx, 5);
    		case 31:
    			return this.precpred(this._ctx, 4);
    		case 32:
    			return this.precpred(this._ctx, 3);
    		case 33:
    			return this.precpred(this._ctx, 2);
    		case 34:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    term__sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 35:
    			return this.precpred(this._ctx, 16);
    		case 36:
    			return this.precpred(this._ctx, 15);
    		case 37:
    			return this.precpred(this._ctx, 14);
    		case 38:
    			return this.precpred(this._ctx, 12);
    		case 39:
    			return this.precpred(this._ctx, 11);
    		case 40:
    			return this.precpred(this._ctx, 10);
    		case 41:
    			return this.precpred(this._ctx, 9);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    elist_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 42:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, alefParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2 || ((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 540131651) !== 0) || ((((_la - 83)) & ~0x1f) === 0 && ((1 << (_la - 83)) & 6603) !== 0)) {
	            this.state = 122;
	            this.decllist();
	        }

	        this.state = 125;
	        this.match(alefParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decllist() {
	    let localctx = new DecllistContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, alefParser.RULE_decllist);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 128; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 127;
	            this.decl();
	            this.state = 130; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===2 || ((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 540131651) !== 0) || ((((_la - 83)) & ~0x1f) === 0 && ((1 << (_la - 83)) & 6603) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decl() {
	    let localctx = new DeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, alefParser.RULE_decl);
	    var _la = 0;
	    try {
	        this.state = 179;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 132;
	            this.tname();
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2 || _la===11 || _la===95) {
	                this.state = 133;
	                this.vardecllist();
	            }

	            this.state = 136;
	            this.match(alefParser.T__0);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 138;
	            this.tname();
	            this.state = 139;
	            this.vardecl();
	            this.state = 140;
	            this.match(alefParser.T__1);
	            this.state = 142;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 2576) !== 0) || ((((_la - 56)) & ~0x1f) === 0 && ((1 << (_la - 56)) & 1216365573) !== 0) || ((((_la - 90)) & ~0x1f) === 0 && ((1 << (_la - 90)) & 35) !== 0)) {
	                this.state = 141;
	                this.arglist();
	            }

	            this.state = 144;
	            this.match(alefParser.T__2);
	            this.state = 145;
	            this.block();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 147;
	            this.tname();
	            this.state = 148;
	            this.adtfunc();
	            this.state = 149;
	            this.match(alefParser.T__1);
	            this.state = 151;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 2576) !== 0) || ((((_la - 56)) & ~0x1f) === 0 && ((1 << (_la - 56)) & 1216365573) !== 0) || ((((_la - 90)) & ~0x1f) === 0 && ((1 << (_la - 90)) & 35) !== 0)) {
	                this.state = 150;
	                this.arglist();
	            }

	            this.state = 153;
	            this.match(alefParser.T__2);
	            this.state = 154;
	            this.block();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 156;
	            this.tname();
	            this.state = 157;
	            this.vardecl();
	            this.state = 158;
	            this.match(alefParser.T__1);
	            this.state = 160;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 2576) !== 0) || ((((_la - 56)) & ~0x1f) === 0 && ((1 << (_la - 56)) & 1216365573) !== 0) || ((((_la - 90)) & ~0x1f) === 0 && ((1 << (_la - 90)) & 35) !== 0)) {
	                this.state = 159;
	                this.arglist();
	            }

	            this.state = 162;
	            this.match(alefParser.T__2);
	            this.state = 163;
	            this.match(alefParser.T__0);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 165;
	            this.typespec();
	            this.state = 166;
	            this.match(alefParser.T__0);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 168;
	            this.match(alefParser.TYPEDEF);
	            this.state = 169;
	            this.ztname();
	            this.state = 170;
	            this.vardecl();
	            this.state = 172;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 171;
	                this.zargs();
	            }

	            this.state = 174;
	            this.match(alefParser.T__0);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 176;
	            this.match(alefParser.TYPEDEF);
	            this.state = 177;
	            this.match(alefParser.IDENTIFIER);
	            this.state = 178;
	            this.match(alefParser.T__0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	zargs() {
	    let localctx = new ZargsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, alefParser.RULE_zargs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(alefParser.T__1);
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 2576) !== 0) || ((((_la - 56)) & ~0x1f) === 0 && ((1 << (_la - 56)) & 1216365573) !== 0) || ((((_la - 90)) & ~0x1f) === 0 && ((1 << (_la - 90)) & 35) !== 0)) {
	            this.state = 182;
	            this.arglist();
	        }

	        this.state = 185;
	        this.match(alefParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ztname() {
	    let localctx = new ZtnameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, alefParser.RULE_ztname);
	    try {
	        this.state = 191;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	        case 56:
	        case 58:
	        case 65:
	        case 66:
	        case 70:
	        case 71:
	        case 79:
	        case 83:
	        case 86:
	        case 90:
	        case 91:
	        case 94:
	        case 95:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 187;
	            this.tname();
	            break;
	        case 51:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 188;
	            this.match(alefParser.AGGR);
	            break;
	        case 50:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 189;
	            this.match(alefParser.ADT);
	            break;
	        case 89:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 190;
	            this.match(alefParser.UNION);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	adtfunc() {
	    let localctx = new AdtfuncContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, alefParser.RULE_adtfunc);
	    try {
	        this.state = 202;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 95:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 193;
	            this.typename();
	            this.state = 194;
	            this.match(alefParser.T__3);
	            this.state = 195;
	            this.name();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 197;
	            this.indsp();
	            this.state = 198;
	            this.typename();
	            this.state = 199;
	            this.match(alefParser.T__3);
	            this.state = 200;
	            this.name();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typespec() {
	    let localctx = new TypespecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, alefParser.RULE_typespec);
	    var _la = 0;
	    try {
	        this.state = 245;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 51:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 204;
	            this.match(alefParser.AGGR);
	            this.state = 206;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 205;
	                this.ztag();
	            }

	            this.state = 208;
	            this.match(alefParser.T__4);
	            this.state = 209;
	            this.memberlist(0);
	            this.state = 210;
	            this.match(alefParser.T__5);
	            this.state = 212;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 211;
	                this.ztag();
	            }

	            break;
	        case 89:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 214;
	            this.match(alefParser.UNION);
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 215;
	                this.ztag();
	            }

	            this.state = 218;
	            this.match(alefParser.T__4);
	            this.state = 219;
	            this.memberlist(0);
	            this.state = 220;
	            this.match(alefParser.T__5);
	            this.state = 222;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 221;
	                this.ztag();
	            }

	            break;
	        case 50:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 224;
	            this.match(alefParser.ADT);
	            this.state = 226;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 225;
	                this.ztag();
	            }

	            this.state = 229;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===7) {
	                this.state = 228;
	                this.zpolytype();
	            }

	            this.state = 231;
	            this.match(alefParser.T__4);
	            this.state = 232;
	            this.memberlist(0);
	            this.state = 233;
	            this.match(alefParser.T__5);
	            this.state = 235;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 234;
	                this.ztag();
	            }

	            break;
	        case 64:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 237;
	            this.match(alefParser.ENUM);
	            this.state = 239;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===95) {
	                this.state = 238;
	                this.ztag();
	            }

	            this.state = 241;
	            this.match(alefParser.T__4);
	            this.state = 242;
	            this.setlist(0);
	            this.state = 243;
	            this.match(alefParser.T__5);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ztag() {
	    let localctx = new ZtagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, alefParser.RULE_ztag);
	    try {
	        this.state = 249;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 247;
	            this.name();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 248;
	            this.typename();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


